--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.application.name=todolist
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/project
+spring.datasource.url=jdbc:postgresql://localhost:5432/tests
 spring.datasource.username=gabriel
 spring.datasource.password=senha
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#server.port=9090
+
+
+#logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security.authentication=ERROR
+
