feat: containerize application with Docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,12 @@
 spring.application.name=todolist
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/tests
-spring.datasource.username=gabriel
-spring.datasource.password=senha
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
+secret.key=${SECRET_KEY}
+
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-
-#server.port=9090
-
-
-#logging.level.org.springframework.security=DEBUG
-#logging.level.org.springframework.security.authentication=ERROR
-
